--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.46.2",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "use-debounce": "^9.0.4"
   },
   "devDependencies": {
     "@types/node": "latest",
